Corrige erro na documentação do body do endpoint de register
